[tool.poetry]
name = "english-chatbot"
version = "0.1.0"
description = ""
authors = ["bayartsengel <bayartsengelt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
openai = "^1.35.13"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
